[tool.poetry]
name = "crying"
version = "0.1.0"
description = "A simple, but efficient development and production workflow manager"
authors = ["nsde <neostyxde@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
